# Robinson-OrbitalOps

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLONE_PROMPT.md  CRUSOE.md  DEMO_SCRIPT.md  README.md  SETUP.md  configure_crusoe_key.ps1  docker-compose.yml  env.example  generate_simulation.py  launch_new_dashboard.py  package-lock.json  package.json  requirements.txt  run_dashboard.bat  run_dashboard.ps1  run_new_dashboard.bat  server.py  start-backend.cmd  start-frontend.cmd  start-orbitops.cmd  start_dashboard_detached.ps1  workshop.py
backend/: .env  .env.example  BACKEND_PLAN.md  Dockerfile  README.md  alembic.ini  orbitops_backend.py  pyproject.toml  radiationRisk.mjs  requirements.txt  server.mjs
backend/alembic/: env.py
backend/alembic/versions/: 20260704_agent_status_events.py  20260704_phase1_initial.py  20260704_phase2_simulator.py  20260704_phase3_vertical_slice.py  20260704_phase6_outbox.py
backend/app/: __init__.py  action_executor.py  action_generator.py  advisory_agent.py  config.py  constants.py  crusoe_client.py  database.py  main.py  mock_crusoe.py  models.py  prompts.py  risk_engine.py  scenarios.py  simulator.py  state.py
backend/app/agents/: __init__.py  base.py  checkpoint_downlink_agent.py  commander_agent.py  data_context.py  domain_agents.py  multimodal_predictive_agent.py  runner.py  (+5 more)
backend/data/: radiation-environment.mock.json  telemetry.mock.json
backend/scripts/: export_science_module_documents.py  export_scientific_report.py  run_science_from_telemetry_file.py
backend/tests/: test_multimodal_agent.py
(+187 files in other folders)
