[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orbitops-backend"
version = "0.1.0"
description = "OrbitOps backend scaffold (Phase 1)."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.31,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.30,<1",
  "alembic>=1.13,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "redis>=5.0,<6",
  "httpx>=0.27,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.24,<1",
]
